--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     
-        <iframe src="https://webchat.botframework.com/embed/tcmhassistant001?s=h9WK_dB-EG4.cwA.tpc.KN95F9QjCUlgNEcfSEM-ZG2vlEydXA4p3cfBQ81Lon4" style="height: 502px;"></iframe>
+        <iframe src="https://webchat.botframework.com/embed/tcmhassistant?s=ThAVcGATkfQ.cwA.N_s.hUXKBCcYDjTD3HvrtBh1okB8TZC40_Umhv1H59ezrMs" style="height: 502px;"></iframe>
 
         <br />
     <a href='https://join.skype.com/bot/3aa02469-8201-47ec-92a8-fa0eb1729325'><img src='https://dev.botframework.com/Client/Images/Add-To-Skype-Buttons.png' /></a>
@@ -14,7 +14,7 @@
     <br/>
 
     <br/>
-    <a href='https://webchat.botframework.com/embed/tcmhassistant001?s=h9WK_dB-EG4.cwA.tpc.KN95F9QjCUlgNEcfSEM-ZG2vlEydXA4p3cfBQ81Lon4'>Direct Chat</a>
+    <a href='https://webchat.botframework.com/embed/tcmhassistant?s=OJt1REseyCw.cwA.dyg.PwioXWVGNHhH7SwJxxVGKOe9baU_E-W8SbZSGShuTGo'>Direct Chat</a>
 
 </body>
 </html>
