--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     
-        <iframe src="https://webchat.botframework.com/embed/tcmhassistant?s=ThAVcGATkfQ.cwA.N_s.hUXKBCcYDjTD3HvrtBh1okB8TZC40_Umhv1H59ezrMs" style="width: 500px, height: 502px;"></iframe>
+        <iframe src="https://webchat.botframework.com/embed/tcmhassistant?s=ThAVcGATkfQ.cwA.N_s.hUXKBCcYDjTD3HvrtBh1okB8TZC40_Umhv1H59ezrMs" style="width: 500px; height: 502px;"></iframe>
 
         <br />
     <a href='https://join.skype.com/bot/3aa02469-8201-47ec-92a8-fa0eb1729325'><img src='https://dev.botframework.com/Client/Images/Add-To-Skype-Buttons.png' /></a>
